--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "todos-testovoe-server",
     "version": "1.0.0",
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
-        "start": "json-server --watch db.json --port $PORT"
+        "start": "node index.js"
     },
     "dependencies": {
-        "json-server": "^1.0.0-beta.3"
+        "json-server": "^0.17.3",
+        "cors": "^2.8.5"
     }
 }
