--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "todos-testovoe-server",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node server.js"
     },
     "dependencies": {
         "json-server": "^0.17.3",
